--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header class="header">
     <div class="player">
+      <audio src="./assets/sounds/Aqua Caelestis.mp3" id="song"></audio>
       <div class="player-controls">
         <button class="play-prev player-icon"></button>
         <button class="play player-icon"></button>
