--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div class="author"></div>
     </div>
   </footer>
+  <script type="module"  src="js/index.js"></script>
   <script src="js/script.js"></script>
   <script src="js/setLocalStorage.js"></script>
 </body>
